--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
+    "gitmoji-cli": "^9.0.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.0",
     "vite": "^5.0.8"
   },
   "dependencies": {
-    "gsap": "^3.12.4"
+    "gsap": "^3.12.4",
+    "swiper": "^11.0.5"
   }
 }
