--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "gitmoji-cli": "^9.0.0",
+    "pocketbase": "^0.20.1",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.0",
