--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pocketbase": "pocketbase/pocketbase serve"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "gitmoji-cli": "^9.0.0",
+    "lodash": "^4.17.21",
     "pocketbase": "^0.20.1",
     "postcss": "^8.4.32",
+    "postcss-nesting": "^12.0.2",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.0",
     "vite": "^5.0.8"
