--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^5.1.2",
     "gitmoji-cli": "^9.0.0",
     "lodash": "^4.17.21",
     "pocketbase": "^0.20.1",
@@ -19,7 +23,7 @@
     "postcss-nesting": "^12.0.2",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.0",
-    "vite": "^5.0.8"
+    "vite": "^5.0.10"
   },
   "dependencies": {
     "gsap": "^3.12.4",
