--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "pocketbase": "pocketbase/pocketbase serve"
+    "pocketbase": "run-script-os",
+    "pocketbase:win32": ".\\pocketbase\\pocketbase serve",
+    "pocketbase:darwin:linux": "pocketbase/pocketbase serve"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
@@ -22,6 +24,7 @@
     "postcss": "^8.4.32",
     "postcss-nesting": "^12.0.2",
     "prettier": "^3.1.1",
+    "run-script-os": "^1.1.6",
     "tailwindcss": "^3.4.0",
     "vite": "^5.0.10"
   },
