--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "pocketbase": "^0.20.1",
     "postcss": "^8.4.32",
+    "postcss-import": "^16.0.0",
     "postcss-nesting": "^12.0.2",
     "prettier": "^3.1.1",
     "run-script-os": "^1.1.6",
